overflow test fix

--- a/Diary/back-end/blogstyle.css
+++ b/Diary/back-end/blogstyle.css
@@ -270,6 +270,10 @@ main{
     color: #FF3366;
 }
 
+.sources{
+    overscroll-behavior: auto;
+}
+
 
 footer{
     z-index: 100000;
